# handmadehero

./: CMakeLists.txt  main.cpp
.cache/clangd/index/: add.cpp.A34841DAF198EFB8.idx  main.cpp.D60FAE81CF563514.idx  main.cpp.FF8AB17BD10F8880.idx
handmade/: .clangd  build.sh  handmade
handmade/.cache/clangd/index/: unix64_handmade.cpp.742FDBDC0466FA66.idx  unix64_handmade.cpp.EC3C7186765A030F.idx
handmade/code/: unix64_handmade.cpp
raylib/: .gitignore  CMakeLists.txt
raylib/.cache/clangd/index/: main.cpp.D60FAE81CF563514.idx
raylib/src/: main.cpp
src/: main.cpp
